# genealogy-plugin

./: .dxtignore  .gitignore  .mcp.json  CLAUDE.md  IDEAS.md  README.md  SCHEMA.md  manifest.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
scripts/: basia_csv.py  build-dxt.sh  crawl_lubgens_navigation.py  diecezja_krakow_csv.py  diecezja_tarnow_csv.py  genbaza_resources_csv.py  geneteka_parish_books.py
skills/research-person/: SKILL.md  check_vault_links.py  template.md
sources/: basia.csv  diecezja_krakow.csv  diecezja_tarnow.csv  genbaza.csv  geneteka.csv  lubgens.csv  pomerania.genbaza.pl.csv  swietogen.genbaza.pl.csv
src/genealogy_mcp/: __init__.py  __main__.py  _cli_config.py  call.py  server.py
src/genealogy_mcp/scrapers/: common.py
src/genealogy_mcp/sources/: _http_retry.py
src/genealogy_mcp/sources/basia/: __init__.py  client.py  constants.py  models.py  parser.py  tools.py
src/genealogy_mcp/sources/gedcom/: __init__.py  parser.py  queries.py  tools.py
src/genealogy_mcp/sources/genbaza/: __init__.py  client.py  constants.py  parser.py  tools.py
src/genealogy_mcp/sources/genealogia_w_archiwach/: client.py  (+4 more)
src/heredis_mcp/: __init__.py  __main__.py  db.py  queries.py  server.py
src/polish_genealogy_mcp/: __init__.py  __main__.py  _cli_config.py  call.py  server.py
src/polish_genealogy_mcp/sources/: _http_retry.py
tests/: conftest.py  test_basia_client.py  test_basia_parser.py  test_crawl_lubgens_navigation.py  test_db.py  test_gedcom.py  test_genbaza_client.py  test_genbaza_parser.py  test_genbaza_resources_csv.py  test_genealogia_w_archiwach_parser.py  test_genealogyindexer_client.py  test_genealogyindexer_parser.py  test_geneteka_parser.py  test_geneteka_regions.py  test_genpod_client.py  test_http_retry.py  test_lubgens_parser.py  test_manifest.py  test_queries.py  test_server.py
tests/fixtures/: geneteka_births.json  geneteka_marriages.json  geneteka_se_form.html  sample.ged
tests/fixtures/basia/: search_szumiec.html  search_szumiec_births_1810_1830.html
tests/fixtures/genbaza/: kurpie_resources.html  kurpie_search.html  polishgenealogy_empty.html  polishgenealogy_resources.html  pomerania_search.html  swietogen_no_results.html  swietogen_resources.html  swietogen_search.html  warmia_resources.html  warmia_search.html
tests/fixtures/genealogyindexer/: search_no_matches.html  search_szumiec.html
tests/fixtures/lubgens/: search_kowalski.html
(+75 files in other folders)
