[project]
name = "heredis-mcp"
version = "0.1.0"
description = "Read-only MCP server exposing a Heredis genealogy database to AI agents."
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.7",
]

[project.scripts]
heredis-mcp = "heredis_mcp.__main__:main"

[dependency-groups]
dev = [
    "black>=24.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heredis_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py314"]
