[project]
name = "genealogy-mcp"
version = "0.3.3"
description = "MCP server for genealogy: read-only access to a Heredis file (verified facts) plus live Polish parish-record search (Geneteka, Genealogia w Archiwach, GenPod, genbaza family)."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=2.0",
    "ged4py>=0.5.2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "requests>=2.33.1",
]

[project.scripts]
genealogy-mcp = "genealogy_mcp.__main__:main"
genealogy-mcp-call = "genealogy_mcp.call:main"

[dependency-groups]
dev = [
    "black>=24.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genealogy_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py311"]
